--- a/style.css
+++ b/style.css
@@ -4,53 +4,49 @@ body {
 }
 
 header {
-  padding: 20px 0;
+  padding: 10px 0;
 }
 
 header .row,
-footer .row {
-  display: flex;
-  align-items: center;
-}
+footer .row {}
 
 header h1 {
-  font-weight: 700;
+  font-weight: 400;
+	font-size: 30px;
   margin: 0;
 }
 
 header nav {
-  display: flex;
-  justify-content: flex-end;
-  flex:wrap;
+		display: -webkit-inline-box;
 }
 
 header p {
-  padding: 0 20px;
+  padding: 10px;
   margin: 0;
 }
 
 .jumbotron {
   display: flex;
-  align-items: center;
+  align-items: flex-start;
   background-image: url('#');
   background-size: cover;
   color: #000000;
   height: 300px;
-  text-shadow: 10px 10px 10px #ffffff;
+  text-shadow: 1px 1px 1px #ffffff;
 }
 
 .jumbotron h2 {
   font-size: 60px;
   font-weight: 700;
-  margin: 0;
+  margin: 10px;
   color: #000000;
-	text-shadow: 10px 10px 2px #ffffff;
+	text-shadow: 1px 1px 1px #ffffff;
 }
 
 .jumbotron h3 {
   margin: 0 0 20px;
   color: #000000;
-	text-shadow: 10px 10px 2px #ffffff;
+	text-shadow: 1px 1px 1px #ffffff;
 }
 
 section .row img {
@@ -64,6 +60,8 @@ section .row img {
 
 .btn.btn-primary {
   border-radius: 0px;
+	width:100px;
+	height:35px;
   border: 0px;
   color: #000000;
   text-shadow: none;
@@ -71,14 +69,14 @@ section .row img {
 }
 
 .btn.btn-primary:hover {
-  color: #ffbb00c5;
-  background-color: #000000;
+  color: #000000;
+  background-color: #d69d00c5;
 }
 
 .btn-secondary {
   background-color: #ffbb00c5;
   color: #000000;
-  margin: 0 0 30px;
+  margin: 0 0 0px;
 }
 
 footer {
