--- a/html/style.css
+++ b/html/style.css
@@ -34,11 +34,11 @@ header p {
 
 .jumbotron {
   display: flex;
-  align-items: flex-start;
+  align-items: flex-center;
   background-image: url('#');
   background-size: cover;
   color: #000000;
-  height: 300px;
+  height: 250px;
   text-shadow: 1px 1px 1px #ffffff;
 }
 
