added photos, content, adjusted css, fixed backward linking

--- a/html/style.css
+++ b/html/style.css
@@ -14,7 +14,7 @@ footer .row {
 }
 
 header h1 {
-  font-weight: 400;
+  font-weight:400;
 	font-weight:bold;
 	font-size: 30px;
   margin: 0;
@@ -35,10 +35,10 @@ header p {
 .jumbotron {
   display: flex;
   align-items: flex-center;
-  background-image: url('#');
+  background-image: url();
   background-size: cover;
   color: #000000;
-  height: 250px;
+  height: 300px;
   text-shadow: 1px 1px 1px #ffffff;
 }
 
@@ -68,7 +68,7 @@ section .row img {
 .btn.btn-primary {
   border-radius: 0px;
 	width:135px;
-	height:35px;
+	height:32px;
   border: 0px;
   color: #000000;
   text-shadow: none;
