--- a/html/style.css
+++ b/html/style.css
@@ -3,14 +3,20 @@ body {
   font-weight: 300;
 }
 
+a{
+	color:black;
+}
+
 header {
   padding: 10px 0;
 	font-weight:bold;
+	color:black;
 }
 
 header .row,
 footer .row {
 	font-weight:bold;
+	color:black;
 }
 
 header h1 {
@@ -23,37 +29,50 @@ header h1 {
 header nav {
 	display: -webkit-inline-box;
 	font-weight:bold;
+	color:black;
 }
 
 header p {
   padding: 10px;
 	color: #ffbb00c5;
 	font-weight:bold;
+	color:black;
   margin: 0;
+}
+
+header a{
+	background-color:#595959;
+  color: white;
+  padding: .5em .75em;
+  text-decoration: none;
+}
+
+header a:hover{
+	background-color: #636363;
+  color: white;
+  padding: .75em 1em;
+  text-decoration: none;
 }
 
 .jumbotron {
   display: flex;
   align-items: flex-center;
-  background-image: url();
+	background-color: black;;
   background-size: cover;
   color: #000000;
   height: 300px;
-  text-shadow: 1px 1px 1px #ffffff;
 }
 
 .jumbotron h2 {
   font-size: 60px;
   font-weight: 700;
   margin: 10px;
-  color: #000000;
-	text-shadow: 1px 1px 1px #ffffff;
+  color: #ffffff;
 }
 
 .jumbotron h3 {
   margin: 0 0 20px;
-  color: #000000;
-	text-shadow: 1px 1px 1px #ffffff;
+  color: #ffffff;
 }
 
 section .row img {
@@ -66,11 +85,11 @@ section .row img {
 }
 
 .btn.btn-primary {
-  border-radius: 0px;
 	width:135px;
 	height:32px;
-  border: 0px;
-  color: #000000;
+  border: 10px, white;
+  color: black;
+	font-weight:bold;
   text-shadow: none;
 	justify-content: center;
   background-color: #ffbb00c5;
@@ -78,6 +97,8 @@ section .row img {
 
 .btn.btn-primary:hover {
   color: #000000;
+	border: 10px, white;
+	font-weight:bold;
   background-color: #d69d00c5;
 }
 
@@ -115,4 +136,18 @@ header.row h1{
 
 body li{
 	list-style-type: url(/images/favicon.png);
+}
+
+#bread{
+	background-size:cover;
+}
+
+#bread ol{
+	background-color: #474747;
+	background-size:cover;
+}
+
+#bread a{
+	color:white;
+	font-weight:bold;
 }
